css: bugfix: So on member pages, the Collection selection box doesn't get hidden by the footer

--- a/media/css/slider.css
+++ b/media/css/slider.css
@@ -27,6 +27,9 @@ table.slider-top {
 .slider-top div#project_col 
 {  
   width:250px;
+  /*So on member pages, the Collection selection box
+    doesn't get hidden by the footer  */
+  min-height:400px;
   }
 .slider-top div#filter_col
 { 
